--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,16 +1,45 @@
 html,
 body {
+  width: 100%;
+  height: 100%;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
+}
+
+html,body {
+  margin:0;
+  padding:0;
+}
+
+ul,li,ol {
+  padding:0;
+  margin:0;
+  list-style: none;
+}
+
+h1,h2,h3,h4,p {
+  margin:0;
+  padding:0;
+  font-size: 100%;
+  font: inherit;
+}
+
+button, input {
+  outline:none;
+  border: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
