메인페이지로 이동시 포켓몬 전체 리스트 API 호출

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -53,6 +53,7 @@
         background-color: #f1f1f1;
         border-radius: 2px 10px 10px 2px;
         transform: rotateX(10deg);
+        text-align: center;
         // z-index: 2;
   
         &:nth-child(1) {
