포켓몬 리스트 정렬 및 type에 따라 라벨 class

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,2 +1,16 @@
 $blue: #0070f3;
 $book-color: #b72f2f;
+
+$empty-star: #e4e0e0;
+$rating-star: #f7c900;
+
+$border-line: #f1f1f1;
+
+$green-label: #88ba88; //#88ba88;
+$light-green-label: #4dbf62;
+$purple-label: #b875b8;
+$red-label: #d56262;
+$blue-green-label: #84cec6;
+$blue-label: #65aae3;
+$orange-label: orange;
+$yellow-label: #ebeb32;
