--- a/styles/variables/_colors.scss
+++ b/styles/variables/_colors.scss
@@ -14,3 +14,8 @@ $blue-green-label: #84cec6;
 $blue-label: #65aae3;
 $orange-label: orange;
 $yellow-label: #ebeb32;
+
+$green-shadow: #687a68;
+$red-shadow: #883c3c;
+$blue-shadow: #294359;
+$normal-shadow: #4c6651;
