--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -1,4 +1,4 @@
-@import './variables';
+@import './variables/colors';
 
 .main {
   padding: 20px;
@@ -6,7 +6,7 @@
   .logo {
     text-align: center;
   }
-  .searchSection {
+  .search-section {
     text-align: center;
     margin: 20px 0 150px;
 
@@ -17,18 +17,30 @@
       border-radius: 20px;
     }
   }
-  .pokemonList {
+  .pokemon-list {
     width: 100%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    background-color: #f4f2f2;
+    border-radius: 5px;
 
     li {
       padding: 20px 47px;
       margin: 20px 10px;
       text-align: center;
-      border: 1px solid gray;
+      // border: 1px solid gray;
       cursor: pointer;
+
+      border: 1px solid white;
+      background-color: #f0f0f0;
+      box-shadow: inset 7px 10px 15px 0px #d3cdcd, 1px 2px 0px 0px #fffefe, inset 0px 1px 10px 8px #fff;
+      border-radius: 10px;
+      transition: all 0.3s ease;
+
+      &:hover {
+        box-shadow: inset -8px -7px 12px 0px #d3cdcd, -2px -1px 0px 0px #fffefe, inset -4px -3px 10px 8px #fff
+      }
     }
   }
 }
