--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -29,17 +29,17 @@
       padding: 20px 47px;
       margin: 20px 10px;
       text-align: center;
-      // border: 1px solid gray;
       cursor: pointer;
 
       border: 1px solid white;
       background-color: #f0f0f0;
-      box-shadow: inset 7px 10px 15px 0px #d3cdcd, 1px 2px 0px 0px #fffefe, inset 0px 1px 10px 8px #fff;
       border-radius: 10px;
+      box-shadow: 12px 11px 11px 5px #e1e4e6, -8px -8px 7px 0px #f6f6f6;
       transition: all 0.3s ease;
-
+      
       &:hover {
-        box-shadow: inset -8px -7px 12px 0px #d3cdcd, -2px -1px 0px 0px #fffefe, inset -4px -3px 10px 8px #fff
+        box-shadow: inset 7px 10px 15px 0px #d3cdcd, 1px 2px 0px 0px #fffefe, inset 0px 1px 10px 8px #fff;
+        // box-shadow: inset -8px -7px 12px 0px #d3cdcd, -2px -1px 0px 0px #fffefe, inset -4px -3px 10px 8px #fff
       }
     }
   }
