--- a/styles/variables/_colors.scss
+++ b/styles/variables/_colors.scss
@@ -1,6 +1,8 @@
 $blue: #0070f3;
 $book-color: #b72f2f;
 
+$pink: #eb3264;
+
 $empty-star: #e4e0e0;
 $rating-star: #f7c900;
 
@@ -19,3 +21,8 @@ $green-shadow: #687a68;
 $red-shadow: #883c3c;
 $blue-shadow: #294359;
 $normal-shadow: #4c6651;
+
+$card-color: #f0f0f0;
+$list-bg: #f4f2f2;
+
+$graph-dark-shadow: #7a7777;
