--- a/styles/variables/_colors.scss
+++ b/styles/variables/_colors.scss
@@ -22,7 +22,14 @@ $red-shadow: #883c3c;
 $blue-shadow: #294359;
 $normal-shadow: #4c6651;
 
-$card-color: #f0f0f0;
 $list-bg: #f4f2f2;
 
 $graph-dark-shadow: #7a7777;
+$light-gray: #fbfbfb;
+
+
+
+
+
+$background-color: #f7f4f4;
+$container-bg: #f0f0f0;
