--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,13 @@
+
+@import './variables/colors';
+
 html,
 body {
   width: 100%;
   height: 100%;
   padding: 0;
   margin: 0;
+  background-color: $background-color;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
