--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -31,9 +31,9 @@
       margin: 20px 10px;
       text-align: center;
       cursor: pointer;
-
+      @include card-normal-shadow();
       border: 1px solid #fff;
-      background-color: $card-color;
+      background-color: $container-bg;
       border-radius: 10px;
       transition: all 0.3s ease;
       
