state 업데이트 될때마다 Stat그래프 그리도록 수정

--- a/styles/detail.module.scss
+++ b/styles/detail.module.scss
@@ -115,6 +115,8 @@
             top: 0;
             padding: 10px;
             border-radius: 10px;
+            width: 0;
+            transition: all 1s ease;
           }
 
           .happiness-bar {
