generation 표기 변환 로직 추가

--- a/styles/detail.module.scss
+++ b/styles/detail.module.scss
@@ -114,7 +114,7 @@
     .default-info {
       ul {
         li {
-          .section-title {
+          .category-title {
             margin: 10px 0;
           }
           width: 20%;
