--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -8,14 +8,40 @@
     text-align: center;
   }
   .search-section {
-    text-align: center;
     margin: 20px 0 150px;
 
-    input {
-      padding: 10px;
+    .search-bar {
+      position: relative;
       width: 40%;
+      margin: 0 auto;
       border: 1px solid #7f7a7a;
       border-radius: 20px;
+
+      input {
+        width: 100%;
+        height: 100%;
+        padding: 13px 48px;
+        background-color: transparent;
+      }
+
+      .search-icon {
+        position: absolute;
+        left: 15px;
+        top: 13px;
+        color: #525050;
+      }
+
+      .reset-icon {
+        position: absolute;
+        right: 15px;
+        top: 13px;
+        color: #525050;
+        cursor: pointer;
+
+        &:hover {
+          color: red;
+        }
+      }
     }
   }
   .pokemon-list {
