--- a/styles/variables/_colors.scss
+++ b/styles/variables/_colors.scss
@@ -1,35 +1,46 @@
+// label
+$normal-label: #c69b9b;
+$fighting-label: #c72100b8;
+$flying-label: #5d73d4;
+$poison-label: #6b246eb3;
+$ground-label: #e0c068;
+$rock-label: #9e863d;
+$bug-label: #88960e;
+$ghost-label: #5d73d4;
+$steel-label: #5d73d4;
+$fire-label: #d56262;
+$water-label: #65aae3;
+$grass-label: #88ba88;
+
+
+$electric-label: #fbb917;
+$psychic-label: #dc3165de;
+$ice-label: #63c8e1;
+
+$dragon-label: #40a5be;
+$fairy-label: #e191bc;
+$unknown-label: #008080;
+$shadow-label: #25273e91;
+$dark-label: #00000096;
+
+
+// color 
+$orange: orange;
+$yellow: #ebeb32;
 $blue: #0070f3;
 $book-color: #b72f2f;
-
 $pink: #eb3264;
 
-$empty-star: #e4e0e0;
-$rating-star: #f7c900;
 
-$border-line: #f1f1f1;
-
-$green-label: #88ba88; //#88ba88;
-$light-green-label: #4dbf62;
-$purple-label: #b875b8;
-$red-label: #d56262;
-$blue-green-label: #84cec6;
-$blue-label: #65aae3;
-$orange-label: orange;
-$yellow-label: #ebeb32;
-
-$green-shadow: #687a68;
-$red-shadow: #883c3c;
-$blue-shadow: #294359;
+// shadow
 $normal-shadow: #4c6651;
 
+
+// bg
 $list-bg: #f4f2f2;
-
-$graph-dark-shadow: #7a7777;
-$light-gray: #fbfbfb;
-
-
-
-
-
 $background-color: #f7f4f4;
 $container-bg: #f0f0f0;
+
+
+
+
