--- a/styles/detail.module.scss
+++ b/styles/detail.module.scss
@@ -76,10 +76,6 @@
     .section {
       margin: 0 0 30px;
       padding: 10px;
-      // background: $container-bg;
-      // border-radius: 10px;
-      // box-shadow: -3px -3px 7px #ffffff73,
-      // 3px 3px 5px rgba(94,104,121,0.288);
     }
 
     .detail-info, .default-info {
@@ -118,12 +114,79 @@
           }
         }
       }
+
+      .ability {
+        display: block;
+
+        li {
+          display: flex;
+          width: 100%;
+          position: relative;
+          padding: 0;
+          border-bottom: none;
+
+          &:nth-last-child(1) {
+            border-bottom: 1px solid #d6d4d4;
+          }
+
+          .ability-desc {
+            flex: 1;
+            padding: 10px;
+          }
+
+          .ability-name {
+            min-width: 100px;
+            padding: 10px;
+            border-right: 1px solid #d6d4d4;
+            position: relative;
+
+            span {
+              position: absolute;
+              color: red;
+              left: 16px;
+              top: 6px;
+              cursor: pointer;
+
+              &:hover ~ .tool-tip {
+                visibility: visible;
+              }
+            }
+
+            .tool-tip {
+              visibility: hidden;
+              position: absolute;
+              top: 28px;
+              left: -2px;
+              padding: 10px 14px;
+              background-color: #3d3b3bcf;
+              color: white;
+              font-size: 13px;
+              border-radius: 4px;
+              z-index: 1;
+              transition: all 0.3s ease;
+
+              &::after {
+                content: '';
+                position: absolute;
+                width: 0px;
+                height: 0px;
+                border-bottom: 9px solid #3d3b3bdc;
+                border-left: 8px solid transparent;
+                border-right: 8px solid transparent;
+                left: 14px;
+                top: -8px;
+              }
+            }
+
+          }
+        }
+      }
     }
 
     .default-info {
       ul {
         li {
-          padding: 10px 0 0;
+          padding: 0;
           .category-title {
             margin: 10px 0;
           }
