--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -4,11 +4,8 @@
 .main {
   padding: 20px;
 
-  .logo {
-    text-align: center;
-  }
   .search-section {
-    margin: 20px 0 150px;
+    margin: 44px 0;
 
     .search-bar {
       position: relative;
